<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">CookHelper</string>
    <string name="add_a_recipe">Add a Recipe</string>
    <string name="find_a_recipe">Find a Recipe</string>
    <string name="browse_my_recipes">Browse my Recipes</string>
    <string name="help">How to Use CookHelper</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!--AddRecipe-->
    <string name="enter_the_name_of_your_recipe_here">What\'s the name of your recipe?</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="cookhelper">CookHelper</string>
    <string name="category">Category</string>
    <string name="enter_the_recipe_category_here">German? Thai?</string>
    <string name="type">Type</string>
    <string name="enter_the_recipe_type_here">Appetizer? Dessert?</string>
    <string name="prep_time">Prep Time</string>
    <string name="cook_time">Cook Time</string>
    <string name="enter_the_time_here">How long?</string>
    <string name="number_of_servings">Servings</string>
    <string name="number_of_calories">Calories</string>
    <string name="enter_the_servings_here">How many?</string>
    <string name="enter_the_calories_here">Per serving?</string>
    <string name="instructions">Instructions</string>
    <string name="enter_first_instruction_here">What\'s the first instruction?</string>
    <string name="enter_another_instruction_here">What\'s the next instruction?</string>
    <string name="ingredients">Ingredients</string>
    <string name="enter_first_ingredient_here">What\'s the first ingredient?</string>
    <string name="enter_another_ingredient_here">What\'s the next ingredient?</string>
    <string name="quantity">Quantity</string>
    <string name="measure">Unit</string>
    <string name="ingredient_name">Ingredient</string>
    <string name="quantity_hint">0.5</string>
    <string name="measure_hint">Tsp</string>
    <string name="ingredient_name_hint">Cinnamon</string>
    <string name="button_to_add_the_ingredients">Click to add the ingredients</string>
    <string name="click_to_add_instructions">Click to add instructions</string>
    <string name="saveQuestion">Are you sure you want to save?</string>

    <!--EditRecipe-->
    <string name="edit_recipe">Edit Recipe</string>
    <string name="any_new_instructions">Enter a new instruction</string>
    <string name="cancelQuestion">Are you sure you want to cancel?</string>

    <!--Home-->
    <string name="tarjeta_roja">By Tarjeta Roja</string>
    <!--Home Exit questions-->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exit">Exit</string>
    <string name="pauseHomeQuestion">Are you sure you want to exit?</string>

    <!--Help-->
    <string name="how_to_find"><u>How do I find a recipe?</u></string>
    <string name="how_to_find_instructions">First, go to the home screen and select the \"Find A
        Recipe\" button. Next, enter your search criteria. You can select a Category and or a Type
        from the drop-down menus. You can also enter ingredients that you would (or would not) like
        a recipe to contain. For example, you can type "chicken AND onion NOT potato" in the field
        that says Ingredients. Finally, select the \"Search\" button.</string>

    <string name="how_to_browse"><u>How do I view all of my recipes?</u></string>
    <string name="how_to_browse_instructions">Go to the home screen and select the \"Browse
        My Recipes\" button.</string>

    <string name="how_to_add"><u>How do I add a new recipe?</u></string>
    <string name="how_to_add_instructions">Select the \"Add A Recipe\" button on the home screen.
        Then, add your recipe\'s details to the form and select the \"Save\" button at the bottom of the screen.
    </string>

    <string name="how_to_edit"><u>How do I edit a recipe?</u></string>
    <string name="how_to_edit_instructions">First, select a recipe that you have already saved. You
        can do so by browsing your recipes or by finding a specific recipe with search criteria. Now
        select the recipe you wish to edit; you will see a screen with this recipe\'s details.
        There will be a \"Edit\" button at the bottom of that screen. Select it to edit your recipe.</string>

    <string name="how_to_delete"><u>How do I delete a recipe?</u></string>
    <string name="how_to_delete_instructions">Follow the steps to edit a recipe. However, instead of
    pushing the \"Edit\" button, press the \"Delete\" button at the bottom of your recipe. </string>

    <!--FindRecipe-->
    <string name="search_ingredients_instructions1">Use ingredients and the words AND, OR, and NOT
    in the field below.</string>
    <string name="search_ingredients_instructions2">Example: chicken AND onion NOT potato</string>
    <string name="enter_search_ingredients">Enter ingredients here</string>
    <string name="search">Search</string>
    <string name="cookhelper_logo_content_description">CookHelper logo</string>
    <!--FindRecipe temprary strings to populate spinner **NOT ACTUAL VALUES(For test only)**-->
    <string-array name="types">
        <item> </item>
        <item>Appetizer</item>
        <item>Dessert</item>
        <item>Lunch</item>
        <item>Snack</item>
    </string-array>
    <string-array name="Category">
        <item> </item>
        <item>Chinese</item>
        <item>Pakistani</item>
        <item>Italian</item>
    </string-array>

    <!--Results-->
    <string name="resultsSubtitleFind">Showing results for:</string>
    <string name="resultsSubtitleBrowse">Browse All Recipes</string>
    <string name="resultsTitle">Search Results</string>

    <!--ViewRecipe-->
    <string name="servings">Servings:</string>
    <string name="cook_time_viewrecipe">Cook Time:</string>
    <string name="prep_time_viewrecipe">Prep Time:</string>
    <string name="calories">Calories:</string>
    <string name="edit">Edit</string>
    <string name="typeRecipe">Type:</string>
    <string name="Line">|</string>
    <string name="directionsView">Directions:</string>
    <string name="delete">Delete</string>
    <string name="deleteQuestion">Are you sure you want to delete?</string>

</resources>
