<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caitlin.cookhelper.Help">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cookhelper"
                android:id="@+id/textView15"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/help"
                android:id="@+id/textView16"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/how_to_find"
                android:id="@+id/textView17"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/how_to_find_instructions"
                android:id="@+id/textView22" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/how_to_browse"
                android:id="@+id/textView18"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/how_to_browse_instructions"
                android:id="@+id/textView23" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/how_to_add"
                android:id="@+id/textView19"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/how_to_add_instructions"
                android:id="@+id/textView24" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/how_to_edit"
                android:id="@+id/textView20"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/how_to_edit_instructions"
                android:id="@+id/textView25" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/how_to_delete"
                android:id="@+id/textView21"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/how_to_delete_instructions"
                android:id="@+id/textView26" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
