<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caitlin.cookhelper.AddRecipe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cookhelper"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_a_recipe"
                android:id="@+id/textView"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/recipe_name"
                android:id="@+id/textView2"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_gravity="left"
                android:hint="@string/enter_the_name_of_your_recipe_here" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/type"
                android:id="@+id/textView5"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_gravity="left"
                android:hint="@string/enter_the_recipe_type_here" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/category"
                android:id="@+id/textView3"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_gravity="left"
                android:hint="@string/enter_the_recipe_category_here" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prep_time"
                    android:id="@+id/textView6"
                    android:textStyle="bold"
                    android:textIsSelectable="false"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cook_time"
                    android:id="@+id/textView7"
                    android:textStyle="bold"
                    android:textIsSelectable="false"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    android:layout_gravity="right" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:layout_gravity="left"
                    android:hint="@string/enter_the_time_here"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5"
                    android:layout_gravity="right"
                    android:hint="@string/enter_the_time_here"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/number_of_servings"
                    android:id="@+id/textView8"
                    android:textStyle="bold"
                    android:textIsSelectable="false"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    android:layout_gravity="left" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/number_of_calories"
                    android:id="@+id/textView9"
                    android:textStyle="bold"
                    android:textIsSelectable="false"
                    android:textColor="@android:color/black"
                    android:layout_weight="1"
                    android:layout_gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText6"
                    android:layout_gravity="left"
                    android:hint="@string/enter_the_servings_here"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText7"
                    android:layout_gravity="right"
                    android:hint="@string/enter_the_calories_here"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/outerInstructionLL">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/instructions"
                    android:id="@+id/instructionHeading"
                    android:layout_gravity="left"
                    android:textStyle="bold"
                    android:textIsSelectable="false"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/innerInstructionLL">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstInstruction"
                        android:layout_gravity="left"
                        android:hint="@string/enter_first_instruction_here"
                        android:layout_weight="1" />

                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/addInstructionButton"
                        android:layout_gravity="bottom|right"
                        android:background="@android:drawable/ic_input_add"
                        android:clickable="true" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/outerIngredientLL" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ingredients"
                    android:id="@+id/ingredientsHeading"
                    android:layout_gravity="left"
                    android:textStyle="bold"
                    android:textIsSelectable="false"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/linearLayout" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/quantity"
                        android:id="@+id/textView10"
                        android:layout_weight=".4"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/measure"
                        android:id="@+id/textView11"
                        android:layout_weight=".6"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/ingredient_name"
                        android:id="@+id/textView12"
                        android:layout_weight="1"
                        android:textAlignment="center" />

                    <Space
                        android:layout_width="40dp"
                        android:layout_height="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/innerIngredientLL" >

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText8"
                        android:layout_weight=".4"
                        android:inputType="number|numberDecimal"
                        android:hint="@string/quantity_hint"
                        android:textAlignment="center" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText9"
                        android:layout_weight=".6"
                        android:hint="@string/measure_hint"
                        android:textAlignment="center" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText10"
                        android:layout_weight="1"
                        android:hint="@string/ingredient_name_hint"
                        android:textAlignment="center" />

                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/addIngredientButton"
                        android:background="@android:drawable/ic_input_add"
                        android:clickable="true" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/saveRecipeButton"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@android:string/cancel"
                    android:id="@+id/cancelAddButton"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
