<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caitlin.cookhelper.Home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cookhelper"
            android:id="@+id/textView13"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tarjeta_roja"
            android:id="@+id/textView14"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:background="@drawable/cooking_chef_icon" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_a_recipe"
                android:id="@+id/button"
                android:layout_weight="1"
                android:clickable="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/browse_my_recipes"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:clickable="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_a_recipe"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:clickable="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:clickable="true" />
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

    </LinearLayout>

</RelativeLayout>
